--- a/package.json
+++ b/package.json
@@ -86,6 +86,6 @@
     "build": "gatsby build",
     "lh": "lighthousebot",
     "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "deploy": "gatsby build && gh-pages -d public -b master -r 'git@github.com:${gyh0316@gmail.com}/${samsara-ku}.github.io.git'"
   }
 }
