--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    
     - name: Deploy Start
-      run: npm run deploy
+      run: |
+        npm ci
+        npm run deploy
