--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Deploy Start
-      run: |
-        npm ci
-        npm run deploy
+      run: npm run deploy
