--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,30 +5,15 @@ name: WebSite CI/CD
 
 on:
   push:
-    branches: [ dev ]
+    branches:
+      - dev
     
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x]
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-        
-    - name: Git config
-      run: |
-        git config --global user.name "Yunhoe Ku"
-        git config --global user.email "gyh0316@gmail.com"
-
-    - name: Denpendency install
-      run: npm install
-
-    - name: Deploy Start
-      run: npm run deploy
+      - name: Website deploying
+      - uses: actions/checkout@v2
+      - uses: enriikke/gatsby-gh-pages-action@v2
+        with:
+          access-token: ${{ secrets.Website }}
