--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          access-token: ${{ secrets.Website }}
+          access-token: ${{ secrets.WEBSITE }}
