--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "gatsby": "^2.2.8",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-feed": "^2.1.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-lodash": "^3.0.5",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.30",
     "gatsby-plugin-sitemap": "^2.0.10",
@@ -34,9 +36,9 @@
     "gatsby-transformer-sharp": "^2.1.17",
     "intersection-observer": "^0.5.1",
     "katex": "^0.11.1",
-    "lodash": "^4.17.19",
-    "node-sass": "^4.11.0",
-    "prismjs": "^1.21.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^4.14.0",
+    "prismjs": "^1.25.0",
     "query-string": "^6.13.1",
     "react": "^16.8.1",
     "react-disqus-comments": "^1.4.0",
@@ -59,10 +61,8 @@
     "eslint-plugin-react": "^7.11.1",
     "fs-extra": "^7.0.1",
     "gatsby-post-gen": "^1.0.0",
-    "gh-pages": "^3.1.0",
     "gray-matter": "^4.0.2",
     "inquirer": "^6.2.2",
-    "lighthousebot": "git+https://github.com/GoogleChromeLabs/lighthousebot.git",
     "prettier": "^1.14.2",
     "recursive-readdir": "^2.2.2",
     "signale": "^1.3.0"
@@ -84,8 +84,7 @@
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "build": "gatsby build && gh-pages -d public -b master",
-    "lh": "lighthousebot",
+    "build": "gatsby build",
     "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
   }
 }
