--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,23 @@
-name: Auto Deploy Project When Push Main Branch
-
+name: CI
 on:
   push:
     branches:
       - dev
-        
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-
-    - name: Deploy
-      uses: enriikke/gatsby-gh-pages-action@v2
-      with:
-        access-token: ${{ secrets.ACCESS_TOKEN }}
-        deploy-branch: gh-pages
+      - uses: actions/checkout@v1
+      - name: npm install
+        run: npm install
+      - name: build
+        run: npm run build
+      - name: GitHub Pages
+        if: success()
+        with:
+          target_branch: gh-pages
+          build_dir: public
+        uses: crazy-max/ghaction-github-pages@v1.2.5
+        env:
+          GITHUB_TOKEN: "${{ secrets.ACCESS_TOKEN }}"
+          GITHUB_PAT: ${{ secrets.GH_PAT }}
