--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,34 @@
-name: CI
+name: build gatsby
+
 on:
   push:
     branches:
       - dev
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: npm install
-        run: npm install
-      - name: build
-        run: npm run build
-      - name: GitHub Pages
-        if: success()
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          node-version: '14'
-          target_branch: gh-pages
-          build_dir: public
-        uses: crazy-max/ghaction-github-pages@v1.2.5
+          node-version: '14.x'
+      - name: Cache node_modules
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{runner.OS}}-build-${{hashFiles('**/yarn.lock')}}
+          restore-keys: |
+            ${{ runner.OS }}-build-${{ runner.OS }}-
+      - name: Install dependencies
+        run: yarn install --prod --pure-lockfile
+      - name: Build
+        run: yarn build --prefix-paths
         env:
-          GITHUB_TOKEN: "${{ secrets.ACCESS_TOKEN }}"
-          GITHUB_PAT: ${{ secrets.GH_PAT }}
+          NODE_ENV: production
+      - uses: peaceiris/actions-gh-pages@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./public
